# torch_extention

./: README.md  gem5验证视频.webm  inference.py  license  modeling_telechat.py  openEuler 2403  requirements.txt
Coprocessor/: Add_Tree.sv  Mult_Group.sv  Readme.md  floatAdd.v  floatMult.v  sim.v  top.sv
gem5/: README.md  rvv_test.py  torch_extension_cpp_thread_gemm_without_time  torch_extension_cpp_thread_gemv_without_time
gemm/: gemm.h  gemm_16x8.cpp  gemm_8x8.cpp  gemm_ncopy8_g.c  gemm_ncopy8_g.h  gemm_tcopy16_g.c  gemm_tcopy16_g.h  gemm_tcopy8_g.c  gemm_tcopy8_g.h  hgemm.h  hgemm_16x8.c  hgemm_8x8.c  hgemm_mix.cpp
gemv/: gemv.c  hgemv.c  hgemv.h  hgemv_mix.c
torch_extension/: CMakeLists.txt  README.md
torch_extension/src/: ThreadPool.cpp  ThreadPool.h  gemm.c  gemm.h  gemm_ncopy8_g.c  gemm_ncopy8_g.h  gemm_tcopy16_g.c  gemm_tcopy16_g.h  gemv.c  gemv.h  hgemm.c  hgemm.h  hgemm_mix.cpp  hgemm_mix.hpp  hgemv.c  hgemv.h  hgemv_mix.cpp  hgemv_mix.hpp  llm_extension.cpp
